--- a/.github/workflows/build_push.yml
+++ b/.github/workflows/build_push.yml
@@ -81,7 +81,7 @@ jobs:
           java-version: 11
           distribution: adopt
 
-      - name: Prepare signing key
+      - name: Prepare signing keys
         run: |
           echo ${{ secrets.SIGNING_KEY }} | base64 -d > signingkey.jks
 
